--- a/sample.html
+++ b/sample.html
@@ -43,7 +43,11 @@
 		<div>This is a div.</div>
 		<p>This is a paragraph.</p>
 		<div>This is another div.</div>
-		
+
+	     <strong>This text is also bold</strong>
+	    <b>This text is bold</b>
+	    <em>This text is italic</em>
+	    <i>This text is also italic</i>
 		
     </body>
 </html>
