--- a/sample.html
+++ b/sample.html
@@ -48,6 +48,9 @@
 	    <b>This text is bold</b>
 	    <em>This text is italic</em>
 	    <i>This text is also italic</i>
+
+	    <p>This part is in <b>bold. This part is in <i>italic.</i></b></p>
+	    <p>This part is both in <b><i>bold and italic.</i></b></p>
 		
     </body>
 </html>
