--- a/sample.html
+++ b/sample.html
@@ -38,19 +38,31 @@
 			<li>Rooster</li>
 		</ul>
 				
-		<p>This is a paragraph.</p>
+	<p>This is a paragraph.</p>
 
-		<div>This is a div.</div>
-		<p>This is a paragraph.</p>
-		<div>This is another div.</div>
+	<div>This is a div.</div>
+	<p>This is a paragraph.</p>
+	<div>This is another div.</div>
 
-	    <strong>This text is also bold</strong>
-	    <b>This text is bold</b>
-	    <em>This text is italic</em>
-	    <i>This text is also italic</i>
+	<strong>This text is also bold</strong>
+	<b>This text is bold</b>
+	<em>This text is italic</em>
+	<i>This text is also italic</i>
+	<p>This part is in <b>bold</b>.This part is in <i>italic.</i></p>
+	<p>This part is both in <b><i>bold and italic.</b></i></p>
 
-	    <p>This part is in <b>bold. This part is in <i>italic.</i></b></p>
-	    <p>This part is both in <b><i>bold and italic.</i></b></p>
+	<u>This text is underlined.<u/>
+	<del>This text is striked through.</del>
+
+	<div> This is a div </div>
+	<br>
+	<div> This is another div </div>
+
+	<div> This is a div </div>
+	<hr>
+	<div> This is another div </div>
+
+	<img src="mingyu.jpg" alt="Mingyu my husband ily">
 		
     </body>
 </html>
